--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#">Java 权威面试指南</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">登录</a></li>
+                    <li><a href="https://github.com/login/oauth/authorize?client_id=fe9dcfb978f05dbb7851&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我的<span class="caret"></span></a>
                         <ul class="dropdown-menu">
