--- a/community/src/main/resources/static/css/community.css
+++ b/community/src/main/resources/static/css/community.css
@@ -13,10 +13,7 @@ a{
     margin-bottom: 30px;
 }
 .question-left{
-    padding: 0;
-}
-.question-left h3{
-    margin-left: 30px;
+    padding: 0 30px;
 }
 .question-form{
     padding: 23px;
@@ -39,6 +36,7 @@ a{
 .question-right{
     height: 1094px;
     border-left: 1px solid rgb(229, 229, 229);
+    padding-top: 30px;
 }
 .top-avatar{
     width: 25px;
@@ -73,6 +71,7 @@ a{
 }
 hr{
     margin-bottom: 0;
+    margin-top: 10px;
 }
 .border{
     height: 77px;
@@ -91,4 +90,10 @@ hr{
 }
 .paging{
     float: right;
+}
+.question-left .text-muted, .name-right{
+    font-size: 12px;
+}
+.description, div.edit{
+    margin: 15px 0;
 }
