--- a/community/src/main/resources/templates/profile.html
+++ b/community/src/main/resources/templates/profile.html
@@ -1,19 +1,13 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>码匠社区</title>
+    <title>[[#{sectionName}]]</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
     <script type="application/javascript" src="/js/jquery-1.12.4.js" ></script>
     <script type="application/javascript" src="/js/bootstrap.min.js" ></script>
-
-    <!--<link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../static/css/community.css">
-    <script type="application/javascript" src="../static/js/jquery-1.12.4.js" ></script>
-    <script type="application/javascript" src="../static/js/bootstrap.min.js" ></script>-->
 </head>
 <body>
 <!--    头部导航栏-->
@@ -25,10 +19,10 @@
             <div class="col-md-9 col-sm-12 col-xs-12">
                 <h3 class="title"><span th:text="${sectionName}"></span></h3>
                 <hr>
-				<div class="media border" th:if="${data.getQuestions()!=null}" th:each="question: ${data.getQuestions()}">
+				<div class="media border" th:each="question: ${data.getQuestionDtos()}">
 				  <div class="media-left media-middle">
 					<a href="#">
-					  <img class="media-object left-avatar" th:src="${question.getAvatarUrl()}" οnerrοr="javascript:this.src='image/avatar.jpeg'">
+					  <img class="media-object left-avatar" th:src="${session.user.getAvatarUrl()}" οnerrοr="javascript:this.src='image/avatar.jpeg'">
 					</a>
 				  </div>
 				  <div class="media-body">
