--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/profile/question">我的问题</a></li>
                                 <li><a href="#">个人资料</a></li>
-                                <li><a href="#">退出</a></li>
+                                <li><a href="/logout">退出</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -108,7 +108,7 @@
                     </ul>
                 </nav>
             </div>
-			<div class="col-md-3 col-sm-12 col-xs-12 topic-list">
+			<div class="col-md-3 col-sm-12 col-xs-12">
                 <h3 class="title">热门话题</h3>
 			</div>
 	    </div>
