--- a/community/src/main/resources/templates/profile.html
+++ b/community/src/main/resources/templates/profile.html
@@ -19,18 +19,18 @@
             <div class="col-md-9 col-sm-12 col-xs-12">
                 <h3 class="title"><span th:text="${sectionName}"></span></h3>
                 <hr>
-				<div class="media border" th:each="question: ${data.getQuestionDtos()}">
+				<div class="media border" th:each="questionDto: ${data.getQuestionDtos()}">
 				  <div class="media-left media-middle">
 					<a href="#">
-					  <img class="media-object left-avatar" th:src="${session.user.getAvatarUrl()}" οnerrοr="javascript:this.src='image/avatar.jpeg'">
+					  <img class="media-object left-avatar" th:src="${questionDto.getUser().getAvatarUrl()}" οnerrοr="javascript:this.src='image/avatar.jpeg'">
 					</a>
 				  </div>
 				  <div class="media-body">
-					<h4 class="media-heading right-top-title"><a href="#"><span th:text="${question.getTitle()}"></span></a></h4>
+					<h4 class="media-heading right-top-title"><a href="#"><span th:text="${questionDto.getQuestion().getTitle()}"></span></a></h4>
                     <ul class="content clearfix">
-                      <li><span th:text="${question.getCommentCount()}"></span>个回复</li>
-                      <li><span th:text="${question.getViewCount()}"></span>次浏览</li>
-                      <li><span th:text="${#dates.format(question.getGmtModified(), 'yyyy月mm-dd')}"></span></li>
+                      <li><span th:text="${questionDto.getQuestion().getCommentCount()}"></span>个回复</li>
+                      <li><span th:text="${questionDto.getQuestion().getViewCount()}"></span>次浏览</li>
+                      <li><span th:text="${#dates.format(questionDto.getQuestion().getGmtModified(), 'yyyy月mm-dd')}"></span></li>
                     </ul>
 				  </div>
 				</div>
